Fix illegal reflective access warnings